tests/codegen/fail/subscription/wrong_item.rs
use coasys_juniper::graphql_subscription;

#[graphql_subscription]
enum Character {}

fn main() {}
